--- a/src/css/app.css
+++ b/src/css/app.css
@@ -69,6 +69,11 @@ table.table.table-hover tbody tr:hover {
 	margin: 0;
 }
 
+.no-side-borders {
+	border-left: none;
+	border-right: none;
+}
+
 .margin-top-20 {
 	margin-top: 20px;
 }
