--- a/src/partials/newTournament.html
+++ b/src/partials/newTournament.html
@@ -1,21 +1,69 @@
 <div class="container" ng-controller="newTournament">
 
 	<ul class="nav nav-tabs">
-		<li ng-repeat="tab in tabs" ng-class="{active:isActiveTab(tab.url)}" ng-click="onClickTab(tab)">
+		<li ng-repeat="tab in tabs" ng-class="{active:isActiveTab(tab.url)}" ng-click="onClickTab($index)">
 			<a>{{tab.title}}</a>
 		</li>
 	</ul>
 
 	<form novalidate class="form" name="newTour">
+		<div class="form-group row tabPage">
+			<div class="col-sm-4">
+				<button class="btn btn-default" type="button" 
+				ng-click="onClickTab(currentTabIndex - 1)"
+				ng-disabled="currentTabIndex == 0">
+					<span class="glyphicon glyphicon glyphicon-chevron-left" aria-hidden="true"></span> Předchozí
+				</button>
+			</div>
+			<div class="col-sm-4">
+				<button class="btn btn-primary" type="button" ng-click="update(tour)" ng-disabled="newTour.$invalid">
+					Vytvořit turnaj
+				</button>
+			</div>
+			<div class="col-sm-2 text-right">
+				<button class="btn btn-default" type="button" 
+				ng-click="onClickTab(currentTabIndex + 1)"
+				ng-disabled="!isNextTab()">
+					Následující <span class="glyphicon glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+				</button>
+			</div>
+		</div>
+
 		<div ng-repeat="tab in tabs" ng-show="isActiveTab(tab.url)" class="tabPage" ng-include="getFullTabUrl(tab.url)"></div>
-		
-		<div class="form-group row">
-			<div class="col-sm-offset-2 col-sm-10">
-				<input class="btn btn-primary" type="submit" ng-click="update(tour)" value="Vytvořit turnaj">
+
+		<div class="form-group row tabPage">
+			<div class="col-sm-4">
+				<button class="btn btn-default" type="button" 
+				ng-click="onClickTab(currentTabIndex - 1)"
+				ng-disabled="currentTabIndex == 0">
+					<span class="glyphicon glyphicon glyphicon-chevron-left" aria-hidden="true"></span> Předchozí
+				</button>
+			</div>
+			<div class="col-sm-4">
+				<button class="btn btn-primary" type="button" ng-click="update(tour)" ng-disabled="newTour.$invalid">
+					Vytvořit turnaj
+				</button>
+			</div>
+			<div class="col-sm-2 text-right">
+				<button class="btn btn-default" type="button" 
+				ng-click="onClickTab(currentTabIndex + 1)"
+				ng-disabled="!isNextTab()">
+					Následující <span class="glyphicon glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+				</button>
 			</div>
 		</div>
 	</form>
 
-	<pre>{{ master | json }}</pre>
+	<!-- <div class="row">
+		<div class="col-sm-4">
+			<pre>{{ tour | json }}</pre>
+		</div>
+		<div class="col-sm-4">
+			<pre>{{ tmpData.groupMatches | json }}</pre>
+		</div>
+		<div class="col-sm-4">
+			<pre>{{ x | json }}</pre>
+		</div>
+	</div> -->
 
 </div>
