--- a/src/partials/newTournament/tourForm.html
+++ b/src/partials/newTournament/tourForm.html
@@ -36,11 +36,11 @@
 </div>
 
 <div class="form-group row">
-	<label class="form-control-label col-sm-2" for="place">Místo:</label>
+	<label class="form-control-label col-sm-2" for="city">Město:</label>
 	<div class="col-sm-8">
-		<input class="form-control" type="text" id="place" name="place" ng-model="tour.place" placeholder="Místo" required>
+		<input class="form-control" type="text" id="city" name="city" ng-model="tour.city" placeholder="Město" required>
 	</div>
-	<div class="col-sm-2 formMsg" ng-messages="newTour.place.$error">
+	<div class="col-sm-2 formMsg" ng-messages="newTour.city.$error">
 		<div ng-include="ngMessagesFile"></div>
 	</div>
 </div>
@@ -73,11 +73,12 @@
 	<div class="col-sm-8">
 		<div 
 			isteven-multi-select
-			input-model="teams"
+			input-model="filteredTeams"
 			output-model="tour.teams"
 			button-label="name"
 			item-label="name"
 			tick-property="ticked"
+			output-properties="name id"
 			translation="multiple.teams.texts"
 			max-labels="5"
 			max-height="200px"
@@ -91,30 +92,37 @@
 </div>
 
 <script>
-	// $('.form-group .date').datepicker({
-	// 	format: "yyyy-mm-dd", //dd. mm. yyyy
-	// 	language: "cs"
-	// })
-	let startDate = new Date('01/01/2012')
-	let FromEndDate = new Date()
-	let ToEndDate = new Date()
-	$('#startDate').datepicker({
-		language: "cs",
-		format: "yyyy-mm-dd",
-		autoclose: true
-	}).on('changeDate', function(selected){
-		startDate = new Date(selected.date.valueOf())
-		startDate.setDate(startDate.getDate(new Date(selected.date.valueOf())))
-		$('.to-date').datepicker('setStartDate', startDate)
-	})
-	$('#endDate').datepicker({
-		language: "cs",
-		format: "yyyy-mm-dd",
-		autoclose: true
-	})
-	.on('changeDate', function(selected){
-		FromEndDate = new Date(selected.date.valueOf())
-		FromEndDate.setDate(FromEndDate.getDate(new Date(selected.date.valueOf())))
-		$('.from-date').datepicker('setEndDate', FromEndDate)
+	$(function(){
+		let fromDate = ""
+		let toDate = ""
+
+		$('#startDate').datepicker({
+			language: "cs",
+			format: "yyyy-mm-dd",
+			autoclose: true
+		}).change(function(selected){
+			if (!selected.target.value) return
+			let tmp = fromDate
+			fromDate = selected.target.value
+			if (tmp != fromDate) {
+				$('#endDate').datepicker('setStartDate', fromDate)
+				$('.form-group .date .dateInput').datepicker('setDate', fromDate).datepicker('setStartDate', fromDate)
+				if (!$('#endDate').val()) $('#endDate').datepicker('setDate', fromDate)
+			}
+		})
+		$('#endDate').datepicker({
+			language: "cs",
+			format: "yyyy-mm-dd",
+			autoclose: true
+		})
+		.change(function(selected){
+			if (!selected.target.value) return
+			let tmp = toDate
+			toDate = selected.target.value
+			if (tmp != toDate) {
+				$('#startDate').datepicker('setEndDate', toDate)
+				$('.form-group .date .dateInput').datepicker('setEndDate', toDate)
+			}
+		})
 	})
 </script>
