--- a/src/partials/profile.html
+++ b/src/partials/profile.html
@@ -60,7 +60,7 @@
 										<button type="button" class="btn btn-success" aria-label="Upravit" ng-click="editTour(tour.id)">
 											<span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
 										</button>
-										<button type="button" class="btn btn-danger" aria-label="Smazat" ng-click="delete(tour.id)">
+										<button type="button" class="btn btn-danger" aria-label="Smazat" ng-click="deleteTour(tour.id, tour.name)">
 											<span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
 										</button>
 									</div>
