--- a/src/templates/confirmYN.html
+++ b/src/templates/confirmYN.html
@@ -1,4 +1,4 @@
-<div id="confirmYN" class="modal" data-replace="true" aria-hidden="false">
+<div id="confirmYN" class="modal" data-replace="true">
 	<div class="modal-dialog">
 		<div class="modal-content">
 			<div class="modal-header">
@@ -16,7 +16,7 @@
 						<button type="button" class="btn btn-primary" id="yes">Ano</button>
 					</div>
 					<div class="col-sm-4">
-						<button type="button" class="btn btn-default" id="no" ng-click="noCallback()" data-dismiss="modal">Ne</button>
+						<button type="button" class="btn btn-default" id="no" data-dismiss="modal">Ne</button>
 					</div>
 				</div>
 			</div>
