--- a/src/partials/profile.html
+++ b/src/partials/profile.html
@@ -15,7 +15,7 @@
 			</div>
 			<div class="col-sm-3 text-right">
 				<button class="btn btn-primary" ng-click="editProfile()">
-					<span class="glyphicon glyphicon-plus" aria-hidden="true"></span> Upravit profil
+					<span class="glyphicon glyphicon-edit" aria-hidden="true"></span> Upravit profil
 				</button>
 			</div>
 		</div>
@@ -24,7 +24,7 @@
 			<div class="panel-heading">
 				<div class="row">
 					<div class="col-sm-9 highlight-2">
-						Moje turnaje
+						Neukončené turnaje
 					</div>
 					<div class="col-sm-3 text-right">
 						<button class="btn btn-primary" ng-click="createTour()">
@@ -35,7 +35,7 @@
 			</div>
 			<div class="panel-body">
 				<div class="table-responsive">
-					<table class="table table-striped table-hover">
+					<table ng-if="tours.active.length" class="table table-striped table-hover">
 						<thead>
 							<tr>
 								<th>ID</th>
@@ -48,7 +48,7 @@
 							</tr>
 						</thead>
 						<tbody>
-							<tr ng-repeat="tour in tours">
+							<tr ng-repeat="tour in tours.active">
 								<td>{{ tour.id }}</td>
 								<td>{{ tour.name }}</td>
 								<td>{{ tour.startDate | czDateTime }}</td>
@@ -60,14 +60,64 @@
 										<button type="button" class="btn btn-success" aria-label="Upravit" ng-click="editTour(tour.id)">
 											<span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
 										</button>
-										<button type="button" class="btn btn-danger" aria-label="Smazat" ng-click="deleteTour(tour.id, tour.name)">
-											<span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
+										<button type="button" class="btn btn-warning" aria-label="Ukončit" ng-click="terminateTour(tour.id, tour.name)">
+											<span class="glyphicon glyphicon-ok" aria-hidden="true"></span>
 										</button>
 									</div>
 								</td>
 							</tr>
 						</tbody>
 					</table>
+					<div ng-hide="tours.active.length" class="text-center text-muted">
+						Žádné turnaje
+					</div>
+				</div>
+			</div>
+		</div>
+
+		<div class="panel panel-default" ng-show="logged(3)">
+			<div class="panel-heading">
+				<div class="row">
+					<div class="col-sm-12 highlight-2">
+						Ukončené turnaje
+					</div>
+				</div>
+			</div>
+			<div class="panel-body">
+				<div class="table-responsive">
+					<table ng-if="tours.terminated.length" class="table table-striped table-hover">
+						<thead>
+							<tr>
+								<th>ID</th>
+								<th>Název</th>
+								<th>Od</th>
+								<th>Do</th>
+								<th>Město</th>
+								<th>Země</th>
+								<th>Úpravy</th>
+							</tr>
+						</thead>
+						<tbody>
+							<tr ng-repeat="tour in tours.terminated">
+								<td>{{ tour.id }}</td>
+								<td>{{ tour.name }}</td>
+								<td>{{ tour.startDate | czDateTime }}</td>
+								<td>{{ tour.endDate | czDateTime }}</td>
+								<td>{{ tour.city }}</td>
+								<td>{{ tour.country }}</td>
+								<td class="col-sm-fix">
+									<div class="btn-group">
+										<button type="button" class="btn btn-success" aria-label="Upravit" ng-click="editTour(tour.id)">
+											<span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
+										</button>
+									</div>
+								</td>
+							</tr>
+						</tbody>
+					</table>
+					<div ng-hide="tours.terminated.length" class="text-center text-muted">
+						Žádné turnaje
+					</div>
 				</div>
 			</div>
 		</div>
