--- a/src/templates/_messages.html
+++ b/src/templates/_messages.html
@@ -1,4 +1,4 @@
-<div class="text-validate-msg" ng-message="required">Pvinný údaj</div>
+<div class="text-validate-msg" ng-message="required">Povinný údaj</div>
 <div class="text-validate-msg" ng-message="email">Údaj neodpovídá tvaru emailu</div>
 <div class="text-validate-msg" ng-message="minlength">Příliš krátké</div>
 <div class="text-validate-msg" ng-message="maxlength">Příliš dlouhé</div>
