--- a/src/partials/roster.html
+++ b/src/partials/roster.html
@@ -1,6 +1,6 @@
 <div class="container" ng-controller="Roster">
 
-	<h1>Hodnotit spirit of the game</h1>
+	<h1>Soupiska pro turnaj</h1>
 
 	<form novalidate class="form" name="rosterForm">		
 		<div class="form-group">
@@ -34,7 +34,7 @@
 		</div>
 
 		<div class="form-group">
-			<input class="btn btn-primary" type="button" value="Uložit hodnocení" 
+			<input class="btn btn-primary" type="button" value="Uložit" 
 			ng-disabled="rosterForm.$invalid" ng-click="actions.save()">
 		</div>
 	</form>
