--- a/src/partials/spirit.html
+++ b/src/partials/spirit.html
@@ -11,13 +11,9 @@
 		</div>
 
 		<div ng-hide="isEmpty(selected.match)">
-			<div class="form-group row">
-				<label class="form-control-label col-sm-2" for="comment">Komentář k SOTG:</label>
-				<div class="col-sm-8">
-					<input class="form-control" id="comment" type="text" placeholder="Komentář k SOTG" 
-					ng-model="editUser.comment" name="comment">
-				</div>
-			</div>
+			<h2 class="">
+				<small>Udělte soupeři body:</small>
+			</h2>
 
 			<div class="form-group row">
 				<label class="form-control-label col-sm-2" for="rules">Pravidla *:</label>
@@ -76,6 +72,14 @@
 						ng-click="select('communication', n+1)">
 						{{n+1}}
 					</button>
+				</div>
+			</div>
+		
+			<div class="form-group row">
+				<label class="form-control-label col-sm-2" for="comment">Komentář k SOTG:</label>
+				<div class="col-sm-8">
+					<input class="form-control" id="comment" type="text" placeholder="Komentář k SOTG" 
+					ng-model="editUser.comment" name="comment">
 				</div>
 			</div>
 		</div>
